<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.seeburger.vfs2</groupId>
    <artifactId>seeburger-vfs2-parent</artifactId>
    <version>1.6.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>SEEBURGER VFS2 Parent</name>
    <description>Modules for the apache-commons VFS2 project.</description>

    <scm>
        <connection>scm:git:https://github.com/seeburger-ag/seeburger-vfs2.git</connection>
        <url>http://github.com/seeburger-ag/seeburger-vfs2</url>
        <developerConnection>scm:git:git@github.com:seeburger-ag/seeburger-vfs2.git</developerConnection>
        <tag>master</tag>
    </scm>

    <properties>
        <maven.build.timestamp.format>yyyyMMdd-HHmm</maven.build.timestamp.format>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>8</maven.compiler.source>
        <maven.compiler.target>8</maven.compiler.target>
        <maven.compiler.compilerVersion>${maven.compiler.source}</maven.compiler.compilerVersion>
        <version.commons-vfs2>2.2</version.commons-vfs2>
    </properties>

    <modules>
        <module>vfs2provider-jdbctable</module>
        <module>vfs2provider-digestarc</module>
    </modules>


    <build>
        <pluginManagement>
            <plugins>
                <plugin> <!--  not used -->
                    <artifactId>maven-antrun-plugin</artifactId>
                    <version>1.8</version>
                </plugin>
                <plugin>
                    <artifactId>maven-assembly-plugin</artifactId>
                    <version>2.6</version>
                </plugin>
                <plugin>
                    <artifactId>maven-clean-plugin</artifactId>
                    <version>3.0.0</version>
                </plugin>
                <plugin>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.3</version>
                    <inherited>true</inherited>
                    <configuration>
                        <compilerArgument>-Xlint:all</compilerArgument>
                        <showWarnings>true</showWarnings>
                        <showDeprecation>true</showDeprecation>
                    </configuration>
                </plugin>
                <plugin>
                    <artifactId>maven-dependency-plugin</artifactId>
                    <version>2.10</version>
                </plugin>
                <plugin>
                    <artifactId>maven-deploy-plugin</artifactId>
                    <version>2.8.2</version>
                </plugin>
                <plugin>
                    <artifactId>maven-install-plugin</artifactId>
                    <version>2.5.2</version>
                </plugin>
                <plugin>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>2.6</version>
                    <inherited>true</inherited>
                    <executions>
                        <execution>
                            <id>default-jar</id>
                            <phase>package</phase>
                            <goals>
                                <goal>jar</goal>
                            </goals>
                            <configuration>
                                <archive>
                                    <manifest>
                                        <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                                        <addDefaultSpecificationEntries>false</addDefaultSpecificationEntries>
                                    </manifest>
                                </archive>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>2.10.3</version>
                </plugin>
                <plugin>
                    <artifactId>maven-release-plugin</artifactId>
                    <version>2.5.3</version>
                </plugin>
                <plugin>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>2.7</version>
                </plugin>
                <plugin>
                    <artifactId>maven-site-plugin</artifactId>
                    <version>3.4</version>
                </plugin>
                <plugin>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>2.4</version>
                </plugin>
                <plugin>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>2.19</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-project-info-reports-plugin</artifactId>
                    <version>2.9</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <dependencies>

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-vfs2</artifactId>
            <exclusions>
                <exclusion>
                    <artifactId>maven-scm-api</artifactId>
                    <groupId>org.apache.maven.scm</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>maven-scm-provider-svnexe</artifactId>
                    <groupId>org.apache.maven.scm</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>regexp</artifactId>
                    <groupId>regexp</groupId>
                </exclusion>
            </exclusions>
        </dependency>

        <!-- common test dependencies -->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-vfs2</artifactId>
            <scope>test</scope>
            <classifier>tests</classifier>
            <exclusions>
                <exclusion>
                    <artifactId>regexp</artifactId>
                    <groupId>regexp</groupId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <scope>test</scope>
        </dependency>

    </dependencies>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-vfs2</artifactId>
                <version>${version.commons-vfs2}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-vfs2</artifactId>
                <classifier>tests</classifier>
                <version>${version.commons-vfs2}</version>
            </dependency>
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>4.12</version>
            </dependency>
            <dependency>
                <groupId>commons-io</groupId>
                <artifactId>commons-io</artifactId>
                <version>2.4</version>
                <scope>test</scope>
            </dependency>

            <dependency>
                <groupId>com.seeburger.vfs2</groupId>
                <artifactId>vfs2provider-jdbctable</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.seeburger.vfs2</groupId>
                <artifactId>vfs2provider-digestarc</artifactId>
                <version>${project.version}</version>
            </dependency>

        </dependencies>
    </dependencyManagement>

    <licenses>
        <license>
            <name>Apache License 2.0</name>
            <url>http://www.spdx.org/licenses/Apache-2.0</url>
            <comments>Licenser: SEEBURGER AG, Germany.</comments>
        </license>
    </licenses>

    <url>http://github.com/seeburger-ag/seeburger-vfs2</url>
    <inceptionYear>2013</inceptionYear>

    <organization>
        <name>SEEBURGER AG, Germany.</name>
        <url>http://www.seeburger.com</url>
    </organization>

    <distributionManagement>
        <repository>
            <id>release</id>
            <url>https://repo.seeburger.de/archiva/repository/release/</url>
        </repository>
        <snapshotRepository>
            <id>snapshot</id>
            <url>https://repo.seeburger.de/archiva/repository/snapshot/</url>
        </snapshotRepository>
    </distributionManagement>

</project>